Improve Memory Advisor: 7 new rules, 8 fixes incl. concurrent-GC inflation bug
Fixes MEM-GC-002/003 (exclude concurrent-cycle GC beans), POOL-003 (direct-mem default cap = Xmx), HEAP-003/004/005, FOOTPRINT-002, THREAD-002, CONTENT-003. Adds MEM-POOL-005/006, MEM-FOOTPRINT-003/004, MEM-GC-004/005, MEM-HEAP-007. Collector extended for cgroup usage, swap, VM options. Docs and tests updated (RULE_COUNT 25->32).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>